--- a/source_code/app/src/main/res/layout/activity_main_menu.xml
+++ b/source_code/app/src/main/res/layout/activity_main_menu.xml
@@ -4,15 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".MainMenuActivity">
 
-    <Button
-        android:id="@+id/btnPlay"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:id="@+id/tvPlay"
+        android:textColor="@color/colorWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_button_name"
-        android:textSize="20sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:layout_centerInParent="true" />
 </RelativeLayout>
