--- a/source_code/app/src/main/res/layout/activity_main_menu.xml
+++ b/source_code/app/src/main/res/layout/activity_main_menu.xml
@@ -12,13 +12,42 @@
         android:background="@drawable/background"
         android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/tvPlay"
-        android:textColor="@color/colorWhite"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play_button_name"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvPlay"
+            android:textColor="@color/colorWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/play_button_name"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/tvRank"
+            android:textColor="@color/colorWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rank_button_name"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/tvAccount"
+            android:textColor="@color/colorWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/account_button_name"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </RelativeLayout>
