--- a/source_code/app/src/main/res/layout/activity_game_over.xml
+++ b/source_code/app/src/main/res/layout/activity_game_over.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-            android:text="High score: 30"
+            android:text="High score: wait"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="@color/colorYellow" />
