--- a/source_code/app/src/main/res/layout/activity_ranking.xml
+++ b/source_code/app/src/main/res/layout/activity_ranking.xml
@@ -20,19 +20,26 @@
 
         <TextView
             android:layout_marginTop="30sp"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorGold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RANK"
+            android:text="LEADER BOARD"
             android:textSize="40sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal" />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="10dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
