--- a/source_code/app/src/main/res/layout/activity_ranking.xml
+++ b/source_code/app/src/main/res/layout/activity_ranking.xml
@@ -96,4 +96,30 @@
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOG OUT"
+        android:textColor="@color/colorWhite"
+        android:layout_gravity="end"
+        android:textSize="30dp"
+        android:layout_marginEnd="20dp"
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:id="@+id/tvBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:textColor="@color/colorWhite"
+        android:layout_alignParentBottom="true"
+        android:textSize="30dp"
+        android:layout_marginStart="20dp"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"/>
 </RelativeLayout>
