--- a/source_code/app/src/main/res/layout/activity_main_menu.xml
+++ b/source_code/app/src/main/res/layout/activity_main_menu.xml
@@ -45,7 +45,7 @@
 
             <TextView
                 android:layout_marginTop="20dp"
-                android:id="@+id/tvTutorial"
+                android:id="@+id/tvManual"
                 android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
