fix manual and gameplay, music

--- a/source_code/app/src/main/res/layout/activity_manual.xml
+++ b/source_code/app/src/main/res/layout/activity_manual.xml
@@ -38,6 +38,49 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="10dp">
+
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:src="@drawable/spaceship1"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textSize="30dp"
+                        android:textColor="@color/colorBlue"
+                        android:text="SPACESHIP"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="20dp">
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/spaceship_mark_hit_area"
+                        android:layout_gravity="center"
+                        android:paddingHorizontal="10dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_gravity="center"
+                        android:text="Your mission is to survice. Don't let enemy hit you in the marked red area."
+                        android:textColor="@color/colorWhite"
+                        android:textSize="25dp" />
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
@@ -124,7 +167,7 @@
                             android:layout_gravity="center"
                             android:textSize="25dp"
                             android:textColor="@color/colorWhite"
-                            android:text="Greeny"
+                            android:text="Dead Master"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -157,50 +200,12 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textSize="30dp"
-                        android:textColor="@color/colorBlue"
+                        android:textColor="@color/colorGreen"
                         android:text="ITEM"
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginHorizontal="20dp">
 
-                    <LinearLayout
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/item_heart_up"
-                            android:layout_gravity="center"
-                            android:paddingHorizontal="10dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textSize="25dp"
-                            android:textColor="@color/colorWhite"
-                            android:text="Heart up"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_gravity="center"
-                        android:text="Increase one Heart container."
-                        android:textColor="@color/colorWhite"
-                        android:textSize="25dp" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -237,7 +242,7 @@
                         android:layout_weight="1"
                         android:layout_marginHorizontal="10dp"
                         android:layout_gravity="center"
-                        android:text="+ 30 point."
+                        android:text="+ 20 point."
                         android:textColor="@color/colorWhite"
                         android:textSize="25dp" />
                 </LinearLayout>
@@ -277,7 +282,47 @@
                         android:layout_weight="1"
                         android:layout_marginHorizontal="10dp"
                         android:layout_gravity="center"
-                        android:text="+ 30 point."
+                        android:text="+ 300 point."
+                        android:textColor="@color/colorWhite"
+                        android:textSize="25dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="20dp">
+
+                    <LinearLayout
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/item_heart_up"
+                            android:layout_gravity="center"
+                            android:paddingHorizontal="10dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:textSize="25dp"
+                            android:textColor="@color/colorWhite"
+                            android:text="Heart up"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_gravity="center"
+                        android:text="Increase one Heart container and +100 point."
                         android:textColor="@color/colorWhite"
                         android:textSize="25dp" />
                 </LinearLayout>
@@ -317,50 +362,12 @@
                         android:layout_weight="1"
                         android:layout_marginHorizontal="10dp"
                         android:layout_gravity="center"
-                        android:text="Increase amount of bullet shooting each time by 1."
+                        android:text="Increase amount of bullet shooting each time by 1 and +100 point."
                         android:textColor="@color/colorWhite"
                         android:textSize="25dp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginHorizontal="20dp">
 
-                    <LinearLayout
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/heart"
-                            android:layout_gravity="center"
-                            android:paddingHorizontal="10dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textSize="25dp"
-                            android:textColor="@color/colorWhite"
-                            android:text="Heart"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_gravity="center"
-                        android:text="A great item will fill all your heart containers."
-                        android:textColor="@color/colorWhite"
-                        android:textSize="25dp" />
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
